feat: add change

--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,10 @@ runs:
   using: "composite"
   steps:
     - run: echo "${inputs.specs}"
+      shell: bash
     - run: echo "${inputs.integration_pkg}"
+      shell: bash
     - run: echo "${inputs.license_key}"
+      shell: bash
     - run: echo "${secrets.secret_demo}"
+      shell: bash
