--- a/action.yml
+++ b/action.yml
@@ -24,5 +24,5 @@ runs:
       shell: bash
     - run: echo "${{ inputs.license_key }}"
       shell: bash
-    - run: echo "-----${{ fromJson(inputs.secrets).SECRET_DEMO }}---"
+    - run: echo "${{ inputs.secrets }}"
       shell: bash
