--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: ls
+    - run: ls .github
       shell: bash
     - run: pwd
       shell: bash
