--- a/spec-validator/Makefile
+++ b/spec-validator/Makefile
@@ -1,9 +1,10 @@
 DOCKER_IMG=newrelic-integration-e2e-action:spec-validator
-SPECS=?
+ROOT_DIR=?
+SPECS_PATH=?
 
 all: compile run
 
 compile:
 	docker build -t $(DOCKER_IMG) .
 run:
-	docker run $(DOCKER_IMG) --specs_path=$(SPECS)
+	docker run $(DOCKER_IMG) --root_dir=$(ROOT_DIR) --specs_path=$(SPECS_PATH)
