feat: initial commit

--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,10 @@
 name: newrelic-integration-e2e-action
 description: Run e2e tests for the newrelic integrations.
 inputs:
-  specs:
-    description: Path to the specification files for the tests. Regular expressions are supported.
+  spec_path:
+    description: Path to the test specification file.
     required: false
-    default: "e2e/spec-*.yml"
+    default: "e2e/spec.yml"
   integration_pkg:
     description: Relative path to the pkg to be tested
     required: true
@@ -16,7 +16,7 @@ runs:
   using: "composite"
   steps:
     - id: spec-validator
-      run: make -C ${{ github.action_path }}/spec-validator ROOT_DIR=${{ github.workspace }} SPECS_PATH=${{ inputs.specs }}
+      run: make -C ${{ github.action_path }}/spec-validator SPEC_PATH=${{ github.workspace }}/${{ inputs.spec_path }}
       shell: bash
     - run: echo "${{ inputs.license_key }}"
       shell: bash
