--- a/spec-validator/Makefile
+++ b/spec-validator/Makefile
@@ -1,10 +1,9 @@
 DOCKER_IMG=newrelic-integration-e2e-action:spec-validator
-ROOT_DIR=?
-SPECS_PATH=?
+SPEC_PATH=?
 
 all: compile run
 
 compile:
 	docker build -t $(DOCKER_IMG) .
 run:
-	docker run $(DOCKER_IMG) --root_dir=$(ROOT_DIR) --specs_path=$(SPECS_PATH)
+	docker run $(DOCKER_IMG) --spec_path=$(SPEC_PATH)
