--- a/action.yml
+++ b/action.yml
@@ -14,8 +14,11 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - id: list-files
+      run: cat ${{ github.workspace }}/${{ inputs.spec_path }}
+      shell: bash
     - id: spec-validator
-      run: make -C ${{ github.action_path }}/spec-validator SPEC_PATH=${{ inputs.spec_path }}
+      run: make -C ${{ github.action_path }}/spec-validator SPEC_PATH=${{ github.workspace }}/${{ inputs.spec_path }}
       shell: bash
     - run: echo "${{ inputs.license_key }}"
       shell: bash
