feat: initial commit

--- a/action.yml
+++ b/action.yml
@@ -10,12 +10,16 @@ inputs:
   license_key:
     description: New Relic license key used to test the integration
     required: true
+  verbose:
+    description: Verbose mode enabled
+    required: false
+    default: false
 
 runs:
   using: "composite"
   steps:
     - id: spec-validator
-      run: make -C ${{ github.action_path }}/spec-validator ROOT_DIR=${{ github.workspace }} SPEC_PATH=${{ inputs.spec_path }}
+      run: make -C ${{ github.action_path }}/spec-validator ROOT_DIR=${{ github.workspace }} SPEC_PATH=${{ inputs.spec_path }} VERBOSE=${{ inputs.verbose }}
       shell: bash
     - run: echo "${{ inputs.license_key }}"
       shell: bash
