--- a/.github/workflows/spec-validator.yml
+++ b/.github/workflows/spec-validator.yml
@@ -12,7 +12,7 @@ name: newrelic-integration-e2e-action/spec-validator
 
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     paths: [ spec-validator/** ]
 
 env:
