--- a/.github/workflows/spec-validator.yml
+++ b/.github/workflows/spec-validator.yml
@@ -11,8 +11,7 @@ name: newrelic-integration-e2e-action/spec-validator
 #  - test-integration-nix: Run integration tests in a *nix environment
 
 on:
-  pull_request:
-    branches: [ main ]
+  push:
     paths: [ spec-validator/** ]
 
 env:
