--- a/action.yml
+++ b/action.yml
@@ -19,9 +19,7 @@ runs:
   using: "composite"
   steps:
     - id: spec-validator
-      run: make -C ${{ github.action_path }}/spec-validator ROOT_DIR=${{ github.workspace }} SPEC_PATH=${{ inputs.spec_path }} VERBOSE=${{ inputs.verbose }} docker-run
+      run: make -C ${{ github.action_path }}/spec-validator ROOT_DIR=${{ github.workspace }} SPEC_PATH=${{ inputs.spec_path }} VERBOSE=${{ inputs.verbose }} docker-run-validator
       shell: bash
-    - run: echo "${{ inputs.license_key }}"
-      shell: bash
-    - run: echo "$SECRET_DEMO"
-      shell: bash
+
+
