--- a/newrelic-integration-e2e-action/Dockerfile
+++ b/newrelic-integration-e2e-action/Dockerfile
@@ -1,17 +1,17 @@
+ARG module=validator
 ############################
-# STEP 1 build executable binary
+# STEP 1 build binary
 ############################
 FROM golang:alpine AS builder
 RUN apk update && apk add --no-cache git
 WORKDIR $GOPATH/src
 COPY . .
-# Build the binary.
-RUN go build -o /go/bin/spec-validator cmd/main.go
+RUN go build -o /go/bin/${module} cmd/${module}/main.go
 ############################
 # STEP 2 build a small image
 ############################
 FROM scratch
 # Copy our static executable.
-COPY --from=builder /go/bin/spec-validator /spec-validator
-# Run the e2e-spec-validator binary.
-ENTRYPOINT ["/spec-validator"]
+COPY --from=builder /go/bin/${module} /${module}
+# Run the binary.
+ENTRYPOINT ["/${module}"]
