feat: initial commit

--- a/newrelic-integration-e2e-action/Dockerfile
+++ b/newrelic-integration-e2e-action/Dockerfile
@@ -1,4 +1,4 @@
-ARG module=validator
+ARG MODULE=validator
 ############################
 # STEP 1 build binary
 ############################
@@ -6,12 +6,13 @@ FROM golang:alpine AS builder
 RUN apk update && apk add --no-cache git
 WORKDIR $GOPATH/src
 COPY . .
-RUN go build -o /go/bin/${module} cmd/${module}/main.go
+RUN go build -o /go/bin/validator cmd/validator/main.go
+RUN go build -o /go/bin/executor cmd/executor/main.go
+
 ############################
 # STEP 2 build a small image
 ############################
 FROM scratch
 # Copy our static executable.
-COPY --from=builder /go/bin/${module} /${module}
-# Run the binary.
-ENTRYPOINT ["/${module}"]
+COPY --from=builder /go/bin/validator /validator
+COPY --from=builder /go/bin/executor /executor
