--- a/action.yml
+++ b/action.yml
@@ -4,9 +4,9 @@ inputs:
   spec_path:
     description: Path to the test specification file.
     required: true
-  integration_pkg:
-    description: Relative path to the pkg to be tested
-    required: true
+#  integration_pkg:
+#    description: Relative path to the pkg to be tested
+#    required: true
   license_key:
     description: New Relic license key used to test the integration
     required: true
@@ -21,8 +21,9 @@ runs:
     - id: setup
       run: make -C ${{ github.action_path }}/newrelic-integration-e2e-action docker-build
       shell: bash
-    - id: spec-validator
+    - id: validate-spec
       run: make -C ${{ github.action_path }}/newrelic-integration-e2e-action ROOT_DIR=${{ github.workspace }} SPEC_PATH=${{ inputs.spec_path }} VERBOSE=${{ inputs.verbose }} docker-run-validator
       shell: bash
+
 
 
