feat: initial commit

--- a/newrelic-integration-e2e-action/Makefile
+++ b/newrelic-integration-e2e-action/Makefile
@@ -28,6 +28,10 @@ docker-run-%:
 	@printf "=== $(NAME) === [ run / $* ]: running the binary "
 	docker run --entrypoint /$* -v $(ROOT_DIR):/opt/code $(NAME) --spec_path=/opt/code/$(SPEC_PATH) --verbose_mode=$(VERBOSE)
 
+run-%:
+	@printf "=== $(NAME) === [ run / $* ]: running the binary "
+	go run $(NAME)/$*/main.go --spec_path=$(SPEC_PATH) --verbose_mode=$(VERBOSE)
+
 
 test:
 	@echo "=== $(NAME) === [ test ]: running unit tests..."
