--- a/action.yml
+++ b/action.yml
@@ -22,7 +22,7 @@ runs:
 #      run: make -C ${{ github.action_path }}/newrelic-integration-e2e-action docker-build
 #      shell: bash
     - id: validate-spec
-      run: make -C ${{ github.action_path }}/newrelic-integration-e2e-action ROOT_DIR=${{ github.action_path }} SPEC_PATH=${{ inputs.spec_path }} VERBOSE=${{ inputs.verbose }} run-validator
+      run: make -C ${{ github.action_path }}/newrelic-integration-e2e-action ROOT_DIR=${{ github.action_path }} SPEC_PATH=${{ github.workspace }}/${{ inputs.spec_path }} VERBOSE=${{ inputs.verbose }} run-validator
       shell: bash
 
 
