feat: reorganizing structure

--- a/newrelic-integration-e2e/Makefile
+++ b/newrelic-integration-e2e/Makefile
@@ -1,4 +1,4 @@
-NAME=newrelic-integration-e2e-action
+NAME=newrelic-integration-e2e
 
 GOLANGCI_LINT = github.com/golangci/golangci-lint/cmd/golangci-lint
 GOFLAGS          = -mod=readonly
@@ -7,6 +7,9 @@ GOFLAGS          = -mod=readonly
 SPEC_PATH=?
 ROOT_DIR=?
 VERBOSE=?
+LICENSE_KEY=?
+GH_ACTION_DIR=$(CURDIR)/../
+AGENT_INITIALIZED_FILE=$(GH_ACTION_DIR)/.agent_dir
 
 all: clean validate test docker-build
 
@@ -20,18 +23,15 @@ validate:
 	@[ -f .semgrep.yml ] && semgrep_config=".semgrep.yml" || semgrep_config="p/golang" ; \
 	docker run --rm -v "${PWD}:/src:ro" --workdir / returntocorp/semgrep -c "$$semgrep_config"
 
-docker-build:
-	@printf "=== $(NAME) === [ build ]: running docker build... "
-	@docker build -t $(NAME) .
-
-docker-run-%:
+TMPDIR := $(shell mktemp -d)
+run:
 	@printf "=== $(NAME) === [ run / $* ]: running the binary "
-	docker run --entrypoint /$* -v $(ROOT_DIR):/opt/code $(NAME) --spec_path=/opt/code/$(SPEC_PATH) --verbose_mode=$(VERBOSE)
+	echo "$(TMPDIR)" >> $(GH_ACTION_DIR)/.agent_dir
+	go run $(GH_ACTION_DIR)/$(NAME)/main.go --agent_dir=$(TMPDIR) --license_key=$(LICENSE_KEY) --spec_path=$(SPEC_PATH) --verbose_mode=$(VERBOSE)
 
-run-%:
-	@printf "=== $(NAME) === [ run / $* ]: running the binary "
-	go run $(ROOT_DIR)/$(NAME)/cmd/$*/main.go --spec_path=$(SPEC_PATH) --verbose_mode=$(VERBOSE)
-
+stop:
+	docker-compose -f "$(shell cat ${AGENT_INITIALIZED_FILE})/docker-compose.yml" down -v
+	rm $(AGENT_INITIALIZED_FILE)
 
 test:
 	@echo "=== $(NAME) === [ test ]: running unit tests..."
