--- a/action.yml
+++ b/action.yml
@@ -18,14 +18,8 @@ inputs:
 runs:
   using: "composite"
   steps:
-#    - id: setup
-#      run: make -C ${{ github.action_path }}/newrelic-integration-e2e-action docker-build
-#      shell: bash
-    - id: validate-spec
-      run: make -C ${{ github.action_path }}/newrelic-integration-e2e-action ROOT_DIR=${{ github.action_path }} SPEC_PATH=${{ github.workspace }}/${{ inputs.spec_path }} VERBOSE=${{ inputs.verbose }} run-validator
-      shell: bash
     - id: run-spec
-      run: make -C ${{ github.action_path }}/newrelic-integration-e2e-action ROOT_DIR=${{ github.action_path }} SPEC_PATH=${{ github.workspace }}/${{ inputs.spec_path }} VERBOSE=${{ inputs.verbose }} run-executor
+      run: make -C ${{ github.action_path }}/newrelic-integration-e2e-action ROOT_DIR=${{ github.action_path }} LICENSE_KEY=${{ inputs.license_key }} SPEC_PATH=${{ github.workspace }}/${{ inputs.spec_path }} VERBOSE=${{ inputs.verbose }} run-executor
       shell: bash
 
 
