--- a/action.yml
+++ b/action.yml
@@ -21,6 +21,9 @@ runs:
     - id: run-spec
       run: make -C ${{ github.action_path }}/newrelic-integration-e2e-action ROOT_DIR=${{ github.action_path }} LICENSE_KEY=${{ inputs.license_key }} SPEC_PATH=${{ github.workspace }}/${{ inputs.spec_path }} VERBOSE=${{ inputs.verbose }} run-executor
       shell: bash
+    - id: stop-agent
+      run: make -C ${{ github.action_path }}/newrelic-integration-e2e-action stop
+      shell: bash
 
 
 
