--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ runs:
   using: "composite"
   steps:
     - id: run-spec
-      run: make -C ${{ github.action_path }}/newrelic-integration-e2e ROOT_DIR=${{ github.action_path }} LICENSE_KEY=${{ inputs.license_key }} SPEC_PATH=${{ github.workspace }}/${{ inputs.spec_path }} VERBOSE=${{ inputs.verbose }} run-executor
+      run: make -C ${{ github.action_path }}/newrelic-integration-e2e ROOT_DIR=${{ github.action_path }} LICENSE_KEY=${{ inputs.license_key }} SPEC_PATH=${{ github.workspace }}/${{ inputs.spec_path }} VERBOSE=${{ inputs.verbose }} run
       shell: bash
     - id: stop-agent
       run: make -C ${{ github.action_path }}/newrelic-integration-e2e stop
