add refactor changes

--- a/action.yml
+++ b/action.yml
@@ -4,9 +4,6 @@ inputs:
   spec_path:
     description: Path to the test specification file.
     required: true
-#  integration_pkg:
-#    description: Relative path to the pkg to be tested
-#    required: true
   license_key:
     description: New Relic license key used to test the integration
     required: true
@@ -21,6 +18,8 @@ runs:
     - id: run-spec
       run: make -C ${{ github.action_path }}/newrelic-integration-e2e ROOT_DIR=${{ github.action_path }} LICENSE_KEY=${{ inputs.license_key }} SPEC_PATH=${{ github.workspace }}/${{ inputs.spec_path }} VERBOSE=${{ inputs.verbose }} run
       shell: bash
+    - id: launch-infra-agent
+      run: docker-compose run -d
     - id: stop-agent
       run: make -C ${{ github.action_path }}/newrelic-integration-e2e stop
       shell: bash
