--- a/action.yml
+++ b/action.yml
@@ -16,13 +16,13 @@ inputs:
   verbose:
     description: Verbose mode enabled
     required: false
-    default: false
+    default: "false"
 
 runs:
   using: "composite"
   steps:
     - id: run-spec
-      run: make -C ${{ github.action_path }} ROOT_DIR=${{ github.action_path }} ACCOUNT_ID=${{ inputs.account_id }} API_KEY=${{ inputs.api_key }} LICENSE_KEY=${{ inputs.license_key }} ROOT_DIR=${{ github.workspace }} SPEC_PATH=${{ inputs.spec_path }} VERBOSE=${{ inputs.verbose }} run
+      run: make -C ${{ github.action_path }} ROOT_DIR=${{ github.action_path }} ACCOUNT_ID=${{ inputs.account_id }} API_KEY=${{ inputs.api_key }} LICENSE_KEY=${{ inputs.license_key }} SPEC_PATH=${{ inputs.spec_path }} VERBOSE=${{ inputs.verbose }} run
       shell: bash
 
 
