Adde recursor entity to spec sample
Signed-off-by: Alvaro Cabanas <acabanas@newrelic.com>

--- a/samples/nri-powerdns/powerdns-e2e.yml
+++ b/samples/nri-powerdns/powerdns-e2e.yml
@@ -6,32 +6,32 @@ agent:
     nri-prometheus:  bin/nri-prometheus
 
 scenarios:
-  - description: |
-      This scenario will verify that metrics froms PDNS authoritative
-      are correcly collected.
-    before:
-      - docker-compose -f "deps/docker-compose.yml" up -d
-    after:
-      - docker-compose -f "deps/docker-compose.yml" up -d
-    integrations:
-      - name: nri-powerdns
-        binary_path: bin/nri-powerdns
-        exporter_binary_path: bin/nri-powerdns-exporter
-        config:
-          powerdns_url: http://localhost:8081/api/v1/
-          exporter_port: 9121
-          api_key: authoritative-secret
-    tests:
-      nrqls:
-        - query: ""
-      entities:
-        - type: "POWERDNS_AUTHORITATIVE"
-          data_type: "Metric"
-          metric_name: "powerdns_authoritative_up"
-      metrics:
-        - source: ""
-          except: []
-          additionals: ""
+#  - description: |
+#      This scenario will verify that metrics froms PDNS authoritative
+#      are correcly collected.
+#    before:
+#      - docker-compose -f "deps/docker-compose.yml" up -d
+#    after:
+#      - docker-compose -f "deps/docker-compose.yml" up -d
+#    integrations:
+#      - name: nri-powerdns
+#        binary_path: bin/nri-powerdns
+#        exporter_binary_path: bin/nri-powerdns-exporter
+#        config:
+#          powerdns_url: http://localhost:8081/api/v1/
+#          exporter_port: 9121
+#          api_key: authoritative-secret
+#    tests:
+#      nrqls:
+#        - query: ""
+#      entities:
+#        - type: "POWERDNS_AUTHORITATIVE"
+#          data_type: "Metric"
+#          metric_name: "powerdns_authoritative_up"
+#      metrics:
+#        - source: ""
+#          except: []
+#          additionals: ""
 #  - description: |
 #      This scenario will verify that metrics froms PDNS recursor
 #      are correcly collected.
@@ -51,45 +51,46 @@ scenarios:
 #      nrqls:
 #        - query: ""
 #      entities:
-#        - name: ""
-#          metric_name: ""
-#          data_type: ""
-#
+#        - type: "POWERDNS_AUTHORITATIVE"
+#          data_type: "Metric"
+#          metric_name: "powerdns_authoritative_up"
 #      metrics:
 #        - source: ""
-#          except: []
+#          except: [ ]
 #          additionals: ""
-#  - description: |
-#      This scenario will verify that metrics from both PDNS authoritative & PDNS recursor
-#      are correcly collected.
-#    before:
-#      - docker-compose -f deps/docker-compose.yml up -d
-#    after:
-#      - docker-compose -f deps/docker-compose.yml down -v
-#    integrations:
-#      - name: nri-powerdns
-#        binary_path: bin/nri-powerdns
-#        exporter_binary_path: bin/nri-powerdns-exporter
-#        config:
-#          powerdns_url: http://localhost:8081/api/v1/
-#          exporter_port: 9121
-#          api_key: authoritative-secret
-#      - name: nri-powerdns
-#        binary_path: bin/nri-powerdns
-#        exporter_binary_path: bin/nri-powerdns-exporter
-#        config:
-#          powerdns_url: http://localhost:8082/api/v1/
-#          exporter_port: 9122
-#          api_key: recursor-secret
-#    tests:
-#      nrqls:
-#        - query: ""
-#      entities:
-#        - name: ""
-#          metric_name: ""
-#          data_type: ""
-#
-#      metrics:
-#        - source: ""
-#          except: []
-#          additionals: ""
+  - description: |
+      This scenario will verify that metrics from both PDNS authoritative & PDNS recursor
+      are correcly collected.
+    before:
+      - docker-compose -f deps/docker-compose.yml up -d
+    after:
+      - docker-compose -f deps/docker-compose.yml down -v
+    integrations:
+      - name: nri-powerdns
+        binary_path: bin/nri-powerdns
+        exporter_binary_path: bin/nri-powerdns-exporter
+        config:
+          powerdns_url: http://localhost:8081/api/v1/
+          exporter_port: 9121
+          api_key: authoritative-secret
+      - name: nri-powerdns
+        binary_path: bin/nri-powerdns
+        exporter_binary_path: bin/nri-powerdns-exporter
+        config:
+          powerdns_url: http://localhost:8082/api/v1/
+          exporter_port: 9122
+          api_key: recursor-secret
+    tests:
+      nrqls:
+        - query: ""
+      entities:
+        - type: "POWERDNS_AUTHORITATIVE"
+          data_type: "Metric"
+          metric_name: "powerdns_authoritative_up"
+        - type: "POWERDNS_RECURSOR"
+          data_type: "Metric"
+          metric_name: "powerdns_recursor_up"
+      metrics:
+        - source: ""
+          except: [ ]
+          additionals: ""
